fix: CRUD refetch, development prob - link fix - add async - style: put invisible dot

--- a/day05/src/index.css
+++ b/day05/src/index.css
@@ -100,6 +100,13 @@ abbr[title] {
   display: flex;
 }
 
+.invisible-dot {
+  height: 8px;
+  width: 8px;
+  background-color: transparent;
+  display: flex;
+}
+
 .flex {
   display: flex;
 }
